--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: #fcfcfc;
+    background-color: red;
     opacity:0;
 }
 
