--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: red;
+    background-color: fff;
     opacity:0;
 }
 
@@ -205,7 +205,7 @@ body {
     -webkit-appearance: none;
     -moz-appearance: none;
     border:1px solid #000;
-    background-color:none;
+    background-color:#fff;
 }
 
 
@@ -273,7 +273,7 @@ body {
         -webkit-appearance: none;
         -moz-appearance: none;
         border:1px solid #000;
-        background-color:none;
+        background-color:#fff;
     }
 
     .reset-button{
