--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: lightblue;
+    background-color: rgb(220, 233, 238);
     opacity:0;
 }
 
