--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,15 @@ body {
     background-color: rgb(240, 240, 240);
 }
 
+#startButton:active{
+    padding:80px 50px;
+    border-radius:50%;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.3) 0px 3px 8px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
+    font-size:75px;
+    color:#000;
+    background-color: rgb(240, 240, 240);
+}
+
 #startButton:hover{
     cursor:pointer;
 }
