--- a/styles.css
+++ b/styles.css
@@ -12,18 +12,24 @@ body {
 }
 
 #startButton{
-    padding:80px 50px;
-    border-radius:50%;
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    font-size:75px;
+    padding:10px 30px;
+    border-radius:0%;
+    font-size:35px;
     color:#000;
-    background-color: rgb(240, 240, 240);
+    border:1px solid #000;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 #startButton:active{
+    color:#fff;
+    background-color:#0096FF;
+    border:1px solid #0096FF;
+}
 
-   box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.3) 0px 3px 8px -3px, rgba(0, 0, 0, 0.2) 0px -1px 0px inset;
-  
+#startButton:hover{
+    border:1px solid #0096FF;
+    color:#fff;
+    background-color:#0096FF;
 }
 
 #startButton:hover{
