--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: #F8FBFE;
+    background-color: #ffffff;
     opacity:0;
 }
 
@@ -15,11 +15,14 @@ body {
    position:absolute;
    top:0;
    max-height:50vh;
+   border-radius:50%;
+   background-color:white;
+   max-width:100vw;
 }
 
 #startButton{
     padding:10px 30px;
-    border-radius:0%;
+    border-radius:5px;
     font-size:35px;
     color:#000;
     border:1px solid #000;
@@ -102,7 +105,7 @@ body {
     width:max-content;
     text-align:Center;
     position:relative;
-    transform:translateY(90px);
+    transform:translateY(105px);
 }
 
 
@@ -130,7 +133,7 @@ body {
     border:1px solid black;
     border-radius:5px;
     padding:10px 15px;
-    background-color:#f0f0f0;
+    background-color:#f4faff;
     cursor:pointer;
     padding:25px;
 
@@ -279,7 +282,7 @@ body {
 
     #startButton{
         padding:8px 25px;
-        border-radius:0%;
+        border-radius:5px;
         font-size:26px;
         color:#000;
         border:1px solid #000;
