--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,7 @@ body {
     border:1px solid rgba(0, 246, 206,0.25);
     background-color:rgba(0, 246, 206,0.25);
     text-align:center;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
 }
 
 #language-select option {
