--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,13 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: beige;
+    background-color: rgb(239, 244, 255);
     opacity:0;
 }
 
 .homepage-image{
    position:absolute;
-   top:0;
+   top:20px;
    max-height:50vh;
    border-radius:50%;
    background-color:white;
