--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: rgb(246, 249, 255);
+    background-color: #fff;
     opacity:0;
 }
 
