--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     transition: background-color 0.5s;
-    background-color: #fff;
+    background-color: rgb(248, 251, 255);
     opacity:0;
 }
 
