--- a/styles.css
+++ b/styles.css
@@ -278,8 +278,16 @@ body {
 .reset-button a{
     opacity:0.7;
     color:black;
+    text-decoration:none;
 
 }
+
+.reset-button a:active{
+    opacity:0.7;
+    color:rgb(27, 183, 157);
+
+}
+
 
 
 @media only screen and (max-width: 798px) {
