--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ body {
     border:1px solid black;
     border-radius:5px;
     padding:10px 15px;
-    background-color:#f4faff;
+    background-color:;
     cursor:pointer;
     padding:25px;
 
