--- a/styles.css
+++ b/styles.css
@@ -27,16 +27,14 @@ body {
     color:#000;
     border:1px solid #000;
     background-color:#fff;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    box-shadow: rgb(43, 194, 169) 0px 2px 8px 0px;
 }
 
 #startButton:active{
     box-shadow: none;
+    border:1px solid rgb(43, 194, 169) 
 }
 
-#startButton:hover{
-    box-shadow: none;
-}
 
 #startButton:hover{
     cursor:pointer;
