--- a/styles.css
+++ b/styles.css
@@ -297,13 +297,13 @@ body {
         color:#000;
         border:1px solid #000;
         background-color:#fff;
-        box-shadow: rgb(43, 194, 169) 0px 2px 8px 0px;
+        box-shadow: rgba(43, 194, 169, 0.507) 0px 2px 8px 0px;
     }
     
     #startButton:active{
         box-shadow: none;        
         box-shadow: none;
-        border:1px solid rgb(43, 194, 169)     
+        border:1px solid rgba(43, 194, 169, 0.466)     
     }
     
     
