--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,16 @@ body {
     color:#000;
     border:1px solid #000;
     background-color:#fff;
-    box-shadow: rgb(43, 194, 169) 0px 2px 8px 0px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 
 #startButton:active{
     box-shadow: none;
-    border:1px solid rgb(43, 194, 169) 
 }
 
+#startButton:hover{
+    box-shadow: none;
+}
 
 #startButton:hover{
     cursor:pointer;
@@ -297,18 +299,15 @@ body {
         color:#000;
         border:1px solid #000;
         background-color:#fff;
-        box-shadow: rgba(0, 0, 0, 0.507) 0px 2px 8px 0px;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
     
     #startButton:active{
-        box-shadow: none;        
         box-shadow: none;
-        border:1px solid rgba(0, 0, 0, 0.466)     
     }
     
-    
     #startButton:hover{
-        cursor:pointer;
+        box-shadow: none;
     }
 
 
